examples-generated/dc/v1alpha1/gateway.yaml
apiVersion: dc.tencentcloud.crossplane.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: dc/v1alpha1/gateway
  labels:
    testing.upbound.io/example-name: example
  name: example
spec:
  forProvider:
    gatewayType: NORMAL
    name: tf-example
    networkInstanceId: ${tencentcloud_vpc.vpc.id}
    networkType: VPC
    tags:
      Environment: production
      Owner: ops-team
