examples-generated/dc/v1alpha1/gatewayccnroute.yaml

apiVersion: dc.tencentcloud.crossplane.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: dc/v1alpha1/gatewayccnroute
  labels:
    testing.upbound.io/example-name: ccn_main
  name: ccn-main
spec:
  forProvider:
    gatewayType: NORMAL
    name: ci-cdg-ccn-test
    networkInstanceId: ${tencentcloud_ccn.main.id}
    networkType: CCN
